syntax = "proto3";

package utils;
option go_package = "github.com/dimitriosvasilas/modqp/protos/utils";

message Object {
    string key = 1;
    map<string, Value> attributes = 2;
    int64 timestamp = 3;
}

message Value {
    oneof val {
        string str = 1;
        int64 int = 2;
        double flt = 3;
    }
}

message Operation {
    string opId = 2;
    Object object = 3;
    DataSet dataSet = 4;
    int64 timestamp = 5;
}

message FindRequest {
    int64 timestamp = 1;
    repeated Predicate predicate = 2;
}

message Predicate {
    string datatype = 1;
    string attribute = 2;
    Value lbound = 3;
    Value ubound = 4;
}

message DataSet {
    int64 db = 1;
    int64 dc = 2;
    int64 shard = 3;
}